# Algebra

./: .gitignore  README.md
examples/: CMakeLists.txt  Turan.cpp
inc/: Graph.h  Structure.h
results/TURAN/C6/: ex(n,C6).txt
results/TURAN/C6/Extremal/: EX(10, C6).s6  EX(11, C6).s6  EX(12, C6).s6  EX(13, C6).s6  EX(14, C6).s6  EX(15, C6).s6  EX(16, C6).s6  EX(17, C6).s6  EX(18, C6).s6  EX(19, C6).s6  EX(20, C6).s6  EX(21, C6).s6  EX(22, C6).s6  EX(23, C6).s6  EX(24, C6).s6  EX(25, C6).s6  EX(26, C6).s6  EX(27, C6).s6  EX(28, C6).s6  EX(29, C6).s6  EX(30, C6).s6  EX(6, C6).s6  EX(7, C6).s6  EX(8, C6).s6  EX(9, C6).s6
results/TURAN/K33/: ex(n,K33).txt
results/TURAN/K33/Extremal/: EX(10, K33).s6  EX(11, K33).s6  EX(12, K33).s6  EX(13, K33).s6  EX(14, K33).s6  EX(15, K33).s6  EX(16, K33).s6  EX(17, K33).s6  EX(18, K33).s6  EX(19, K33).s6  EX(20, K33).s6  EX(6, K33).s6  EX(7, K33).s6  EX(8, K33).s6  EX(9, K33).s6
results/TURAN/K34/: ex(n,K34).txt
results/TURAN/K34/Extremal/: EX(10, K34).s6  EX(11, K34).s6  EX(12, K34).s6  EX(13, K34).s6  EX(14, K34).s6  EX(15, K34).s6  EX(16, K34).s6  EX(17, K34).s6  EX(18, K34).s6  EX(7, K34).s6  EX(8, K34).s6  EX(9, K34).s6
results/TURAN/K35/: ex(n,K35).txt
results/TURAN/K35/Extremal/: EX(10, K35).s6  EX(12, K35).s6  EX(15, K35).s6  EX(16, K35).s6  EX(8, K35).s6
results/TURAN/K36/: ex(n,K36).txt
results/TURAN/K36/Extremal/: EX(13, K36).s6  EX(15, K36).s6  EX(16, K36).s6  EX(9, K36).s6
results/TURAN/K44/: ex(n,K44).txt
results/TURAN/Q3/: ex(n,Q3).txt
src/: Graph.cpp  Structure.cpp
(+32 files in other folders)
